--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+   .prose p {
+      @apply text-justify
+   }
+
+   .prose img{
+      @apply rounded-lg
+   }
+
+   .prose h6 {
+      @apply text-center italic mb-5 text-sm md:mb-10
+   }
+}
